SERVER-66368 no reentrancy during logging