src/mongo/logv2/logv2_test.cpp
@@ -287,6 +287,12 @@ public:
         _attachedSinks.push_back(sink);
     }
 
+    void popSink() {
+        auto sink = _attachedSinks.back();
+        boost::log::core::get()->remove_sink(sink);
+        _attachedSinks.pop_back();
+    }
+
     template <typename Fmt>
     LineCapture makeLineCapture(Fmt&& formatter, bool stripEol = true) {
         LineCapture ret(stripEol);
@@ -355,10 +361,20 @@ TEST_F(LogV2Test, Basic) {
     // Message string is selected when using API that also take a format string
     LOGV2(20084, "fmtstr {name}", "msgstr", "name"_attr = 1);
     ASSERT_EQUALS(lines.back(), "msgstr");
+}
 
-    // Test that logging exceptions does not propagate out to user code in release builds
+TEST_F(LogV2Test, MismatchAttrInLogging) {
+    auto lines = makeLineCapture(PlainFormatter());
     if (!kDebugBuild) {
         LOGV2(4638203, "mismatch {name}", "not_name"_attr = 1);
+        ASSERT(StringData(lines.back()).startsWith("Exception during log"_sd));
+    }
+}
+
+TEST_F(LogV2Test, MissingAttrInLogging) {
+    auto lines = makeLineCapture(PlainFormatter());
+    if (!kDebugBuild) {
+        LOGV2(6636803, "Log missing {attr}");
         ASSERT(StringData(lines.back()).startsWith("Exception during log"_sd));
     }
 }
@@ -398,6 +414,27 @@ DEATH_TEST_F(LogV2Test, SIGSEGVDoesNotHang, "Got signal: ") {
     attachSink(sink);
     LOGV2(6384304, "will SIGSEGV {str}", "str"_attr = "sigsegv");
     // If we get here, we didn't segfault, and the test will fail.
+}
+
+class ConsumeThrowsBackend
+    : public bl_sinks::basic_formatted_sink_backend<char, bl_sinks::synchronized_feeding> {
+public:
+    struct LocalException : std::exception {};
+    static auto create() {
+        return boost::make_shared<bl_sinks::synchronous_sink<ConsumeThrowsBackend>>(
+            boost::make_shared<ConsumeThrowsBackend>());
+    }
+
+    void consume(boost::log::record_view const& rec, string_type const& formattedString) {
+        throw LocalException();
+    }
+};
+
+TEST_F(LogV2Test, ExceptInLogging) {
+    auto sink = ConsumeThrowsBackend::create();
+    attachSink(sink);
+    ASSERT_THROWS(LOGV2(6636801, "will throw exception"), ConsumeThrowsBackend::LocalException);
+    popSink();
 }
 
 class LogV2TypesTest : public LogV2Test {
